# FreeCopter

./: .gitignore  CMakeLists.txt  Makefile  README.md
Free-Copter.xcodeproj/: project.pbxproj
Free-Copter.xcodeproj/project.xcworkspace/xcshareddata/: Free-Copter.xccheckout
Free-Copter.xcodeproj/project.xcworkspace/xcuserdata/master.xcuserdatad/: UserInterfaceState.xcuserstate
FreeCopter.xcodeproj/: project.pbxproj
FreeCopter.xcodeproj/project.xcworkspace/xcshareddata/: Free-Copter.xccheckout
FreeCopter.xcodeproj/xcuserdata/master.xcuserdatad/xcschemes/: Ocean.xcscheme
archive/: gpio.c  gpio_control.c
deploy/: Build.sh
dest/: fc
docs/: wcp.md
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  downloads-Ocean.local-root-22  private.xml  timestamps-Ocean.local-root-22
src/: RPI_peripheral.cpp  RPI_peripheral.h  config.h  gpio_mem_dump.cpp  gpio_mem_dump.h  main.cpp  raspberry_pi.cpp  raspberry_pi.h  rpi_interrupt.cpp  rpi_interrupt.h  rpi_rpio_pwm.c  rpi_rpio_pwm.cpp  rpi_rpio_pwm.h  wiringPi_control.cpp  wiringPi_control.h
src/controller/fcapi/: fc-controlproxy.cpp
src/controller/wcp/: wcp-controller.c  wcp-controller.h
src/include/: FreeCopter.h  fc-controlproxy.h  fc-exception.h  wcp.h
src/wrapper/wcp/: wcp-wrapper.c  wcp-wrapper.h
tools/: Makefile  build-rpi.sh  build.sh  check_clock.cpp  defines.sh  pwm_out.py  run.sh  xcode_post_build.sh
tools/FreeCopter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tools/archive/: gpio_control.h
tools/nbproject/private/: configurations.xml  private.xml
(+26 files in other folders)
